refactor: refactored plain aws session facade's update state logic
refactor: refactored named profiles facade's update state logic

feat: added aws credentials applier

feat: added named profiles writer
